<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_render_particle"
    tools:context="de.hackatum.mediasaturn.userapp.activities.IntroActivity">


    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/welcome"
        android:layout_marginTop="75dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:fontFamily="monospace"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:text="@string/implementedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="121dp"
        android:id="@+id/implemented"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:text="@string/assistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="121dp"
        android:id="@+id/assistance"
        android:layout_below="@+id/implemented"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:gravity="center_vertical|center_horizontal" />
</RelativeLayout>
