<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_render_particle"
    tools:context="de.hackatum.mediasaturn.userapp.activities.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:text="@string/register"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:id="@+id/registerTop"
        android:fontFamily="monospace" />

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_above="@+id/userNameInput"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:id="@+id/userNameHeading"
        android:fontFamily="monospace" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="@color/colorWhite"
        android:text=""
        android:ems="10"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:id="@+id/userNameInput" />

    <Button
        android:text="@string/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:id="@+id/submitButton"
        android:onClick="sendUsername"
        android:fontFamily="monospace"
        android:layout_below="@+id/userNameHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />


</RelativeLayout>
